# cses

./: CMakeLists.txt  build.sh  readme.md  run.sh
001_Weird_Algorithm/: CMakeLists.txt  main.cpp
002_Missing_Number/: CMakeLists.txt  main.cpp
003_Repetitions/: CMakeLists.txt
mocks/008/: 03-out.txt  04-out.txt  07-out.txt  08-out.txt  11-out.txt  14-out.txt  22-out.txt  23-out.txt
src/: 001.cpp  002.cpp  003.cpp  004.cpp  005.cpp  006.cpp  007.cpp  008.cpp  009.cpp  010.cpp  011.cpp  012.cpp  013.cpp  014.cpp  015.cpp  016.cpp  017.cpp
