cmake_minimum_required(VERSION 3.14)
project(cses)

set(CMAKE_CXX_STANDARD 11)

add_executable(001 src/001.cpp)
add_executable(002 src/002.cpp)
add_executable(003 src/003.cpp)
add_executable(004 src/004.cpp)
add_executable(005 src/005.cpp)
add_executable(006 src/006.cpp)
add_executable(007 src/007.cpp)
add_executable(008 src/008.cpp)
add_executable(009 src/009.cpp)
add_executable(010 src/010.cpp)
add_executable(011 src/011.cpp)
add_executable(012 src/012.cpp)
add_executable(013 src/013.cpp)
add_executable(014 src/014.cpp)
add_executable(015 src/015.cpp)
add_executable(016 src/016.cpp)
add_executable(017 src/017.cpp)
